argocd/argo-cd/istio-test/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-istio-test-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "100m"

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-istio-test-svc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx

---
# Istio specific configuration
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: nginx-istio-test-gateway
spec:
  selector:
    # kubectl describe  pod istio-ingressgateway-68b4f7f7cb-9dzcv  -n istio-system | grep 'Labels:' -A 5 
    istio: ingressgateway # Use Istio's built-in gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "nginx-app.demo"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-istio-test-virtual-svc
spec:
  hosts:
  - "nginx-app.demo"
  gateways:
  - nginx-istio-test-gateway
  http:
  - route:
    - destination:
        host: nginx-istio-test-svc
        port:
          number: 80
