argocd/argo-cd/istio-test/egress.yml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: dummyjson-svc-https
spec:
  hosts:
  - dummyjson.com
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: TLS
  resolution: DNS
